--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "react": "16.2",
     "react-dom": "16.2",
+    "react-emojione": "^5.0.1",
     "react-r": "^2.0.0-rc02",
     "react-redux": "^5.0.6",
     "redux": "^4.0.5",
